# circular_iterator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  main.cpp
examples/usage_fetch_content/: CMakeLists.txt
examples/usage_fetch_content/dependencies/: CMakeLists.txt
examples/usage_fetch_content/dependencies/circular_iterator/: CMakeLists.txt
examples/usage_fetch_content/src/: CMakeLists.txt  main.cpp
examples/usage_find_package/: CMakeLists.txt
examples/usage_find_package/src/: main.cpp
include/: circular_iterator.h
include/circular_iterator/: circular_iterator.h
test/: CMakeLists.txt  circular_iterator_test_decrement.cpp  circular_iterator_test_empty.cpp  circular_iterator_test_increment.cpp
